Styling improvements:  fixed button sizing, styled email window aside, vertically aligned validation error, centered [send another email] link

--- a/app/assets/stylesheets/ui.scss
+++ b/app/assets/stylesheets/ui.scss
@@ -104,8 +104,9 @@ $window_shadow: 2px 2px 0.5em $window_shadow_color;
 
     button {
       width: calc(100% - 0.5em);
-      padding: 0.25em;
+      height: 2.25em;
       margin: 0.125em 0.25em;
+      font-size: 1rem;  // Override user agent's font size for controls (input, textarea, button, etc.)
     }
   }
 
@@ -115,6 +116,7 @@ $window_shadow: 2px 2px 0.5em $window_shadow_color;
 
     .directions {
       height: 100%;
+      padding-top: 1px;  // looks significantly better without borders butting up against one another
       overflow: auto;
     }
   }
@@ -131,8 +133,13 @@ $window_shadow: 2px 2px 0.5em $window_shadow_color;
   width: 25em;
   padding: 0.5em;
 
+  &> aside {
+    display: block;
+    margin: 0.5em 0 0 0.5em;
+    color: grey;
+  }
+
   form#email-form {
-    margin-top: 0.5em;
     padding: 0.5em;
 
     div.email {
@@ -145,6 +152,7 @@ $window_shadow: 2px 2px 0.5em $window_shadow_color;
     input, textarea {
       width: 95%;
       margin: 0.25em;
+      font-size: 0.9rem;  // Bypass user agent stylesheet for control font-size
     }
 
     textarea {
@@ -157,19 +165,22 @@ $window_shadow: 2px 2px 0.5em $window_shadow_color;
     }
 
     #email-validation {
-      width: calc(100% - 7em - 2em); // button - 2em spacing
       float: left;
+      width: calc(100% - 7em - 2em); // button - 2em spacing
+      padding-top: 0.5em;
       color: firebrick;
     }
 
     button#email-send {
       float: right;
-      width: 7em;
-      padding: 0.25em 2em;
+      width: 8rem;
+      height: 2rem; // Bypass user agend stylesheet for control font-size
     }
 
     a {
       float: right;
+      min-width: 8rem;
+      text-align: center;
       font-size: 0.75em;
     }
   }
